sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a vehicle is empty.
Error: Invalid departLane definition for vehicle '1'
Quitting (on error).
